[package]
name = "seanifyv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.2", features = ["tokio-rustls", "compression-brotli", "compression", "tls"] }
serde = { version = "1.0.140", features = ["derive"] }
sha1 = "0.10.0" # to determine 
