[package]
name = "seanify_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.2", features = ["tokio-rustls", "compression-brotli", "compression", "tls"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.140", features = ["derive"] }
sha1 = "0.10.0" # to determine music id, we use sha1 for speed
