[package]
name = "seanify_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.3", features = ["compat"] }
sha1 = "0.10.0" # to determine music id, we use sha1 for speed
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
lazy_static = "1.4.0"
notify = "4.0.17"
id3 = "1.3.0"
#soundcloud = "0.4.0"
